# raytracing_simple

./: .gitignore  CMakeLists.txt  make_image.cpp
assets/: pic.ppm
include/: vec3.h
src/: make_image.cpp
